--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apple-signin-auth": "^1.7.5",
     "axios": "^1.4.0",
     "azure-middleware": "^1.0.1",
+    "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
